--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -309,7 +309,9 @@ monitoring::checks::datagovuk_publish::host: 'publish-data-beta-production.cloud
 monitoring::checks::sidekiq::enable_signon_check: false
 monitoring::checks::ses::region: 'eu-west-1'
 monitoring::checks::rds::region: 'eu-west-1'
+monitoring::checks::aws_iam_key::enabled: true
 monitoring::checks::aws_iam_key::region: 'eu-west-1'
+monitoring::checks::aws_iam_key::max_aws_iam_key_age: 320
 
 monitoring::checks::lb::region: 'eu-west-1'
 monitoring::checks::lb::loadbalancers:
