Disable aws_iam_key check in Carrenza

--- a/hieradata/production.yaml
+++ b/hieradata/production.yaml
@@ -443,7 +443,9 @@ licensify::apps::licensify_feed::environment: 'production'
 
 monitoring::checks::aws_origin_domain: "production.govuk.digital"
 monitoring::checks::ses::region: us-east-1
+monitoring::checks::aws_iam_key::enabled: false
 monitoring::checks::aws_iam_key::region: 'eu-west-1'
+monitoring::checks::aws_iam_key::max_aws_iam_key_age: 90
 monitoring::checks::smokey::environment: 'production'
 monitoring::contacts::notify_pager: true
 monitoring::contacts::notify_slack: true
