fix the govuk_env_sync config for asset
The govuk_env_sync config should be for staging, not integration. This fixes [PR](https://github.com/alphagov/govuk-puppet/pull/9826)

--- a/hieradata_aws/class/staging/db_admin.yaml
+++ b/hieradata_aws/class/staging/db_admin.yaml
@@ -128,3 +128,14 @@ govuk_env_sync::tasks:
     temppath: "/tmp/whitehall_production"
     url: "govuk-production-database-backups"
     path: "mysql"
+  "pull_govuk_assets_production":
+    ensure: "present"
+    hour: "2"
+    minute: "00"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "govuk_assets_production"
+    temppath: "/tmp/govuk_assets_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
