adjust the govuk_env_sync for licensify in AWS
Changes made:

1. stop backing up integration licensify db because there is no training environment to pull from anymore.

2. start pushing the staging licensify db which for some reason was not being done. This will ensure integration is up to date because it pulls from the staging s3 bucket

3. from staging we do not push audit and subsequently not pull audit in integration because it is believed that this is not needed to for the app
   to work appropriately in integration

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -255,8 +255,9 @@ govuk_env_sync::tasks:
   "pull_licensify_audit_staging_daily":
     <<: *pull_licensify
     database: "licensify-audit"
-    hour: "6"
-    minute: "0"
+    ensure: "absent"
   "pull_licensify_refdata_staging_daily":
     <<: *pull_licensify
     database: "licensify-refdata"
+    hour: "6"
+    minute: "30"
