Create new user manifest

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -189,6 +189,7 @@ users::usernames:
   - alexandrujurubita
   - andysellick
   - anikahenke
+  - benjamineskola
   - benthorner
   - bevanloon
   - brucebolt
