--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -441,6 +441,7 @@ users::usernames:
   - alexandrujurubita
   - andysellick
   - anikahenke
+  - benjamineskola
   - benthorner
   - bevanloon
   - brucebolt
