--- a/hieradata_aws/class/cache.yaml
+++ b/hieradata_aws/class/cache.yaml
@@ -1,4 +1,8 @@
 ---
+
+govuk_safe_to_reboot::can_reboot: 'careful'
+govuk_safe_to_reboot::reason: 'Handles requests, traffic should be drained before restarting'
+
 govuk::apps::authenticating_proxy::mongodb_nodes:
   - 'router-backend-1'
   - 'router-backend-2'
