Fix one-off restore jobs for Licensify in AWS Production.
These had been configured to use (self-hosted) Mongo instead of
DocumentDB.

--- a/hieradata_aws/class/production/db_admin.yaml
+++ b/hieradata_aws/class/production/db_admin.yaml
@@ -65,36 +65,22 @@ govuk_env_sync::tasks:
     temppath: "/tmp/publishing_api_production"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
-  "pull_licensify_production":
+  "pull_licensify_production": &pull_licensify
     ensure: "disabled"
     hour: "1"
     minute: "0"
     action: "pull"
-    dbms: "mongo"
+    dbms: "documentdb"
     storagebackend: "s3"
     database: "licensify"
-    temppath: "/var/lib/mongodb/.dumps"
+    temppath: "/tmp/licensify_production"
     url: "govuk-production-database-backups"
     path: "mongo-licensing"
   "pull_licensify_refdata_production":
+    <<: *pull_licensify
     ensure: "disabled"
-    hour: "2"
-    minute: "30"
-    action: "push"
-    dbms: "mongo"
-    storagebackend: "s3"
     database: "licensify-refdata"
-    temppath: "/var/lib/mongodb/.dumps"
-    url: "govuk-production-database-backups"
-    path: "mongo-licensing"
   "pull_licensify_audit_production":
+    <<: *pull_licensify
     ensure: "disabled"
-    hour: "2"
-    minute: "40"
-    action: "pull"
-    dbms: "mongo"
-    storagebackend: "s3"
     database: "licensify-audit"
-    temppath: "/var/lib/mongodb/.dumps"
-    url: "govuk-production-database-backups"
-    path: "mongo-licensing"
