--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -1091,6 +1091,11 @@ grafana::dashboards::application_dashboards:
   transition:
     show_sidekiq_graphs: true
     has_workers: true
+  whitehall:
+    show_sidekiq_graphs: true
+    has_workers: true
+    error_threshold: 50
+    warning_threshold: 25
 
 grub2::recordfail_timeout: 5
 
