add asset manager to grafana dashboard in AWS

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -980,6 +980,9 @@ grafana::repo::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 grafana::dashboards::app_domain: "%{hiera('app_domain')}"
 grafana::dashboards::machine_suffix_metrics: ''
 grafana::dashboards::application_dashboards:
+  asset-manager:
+    show_sidekiq_graphs: true
+    has_workers: true
   authenticating-proxy: {}
   cache-clearing-service: {}
   calculators: {}
