--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -17,6 +17,7 @@ node_class: &node_class
       - asset_env_sync
   backend:
     apps:
+      - asset-manager
       - cache-clearing-service
       - canary-backend
       - content-data-admin
