--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -908,59 +908,16 @@ grafana::repo::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 grafana::dashboards::app_domain: "%{hiera('app_domain')}"
 grafana::dashboards::machine_suffix_metrics: ''
 grafana::dashboards::application_dashboards:
-  asset-manager:
-    show_sidekiq_graphs: true
-    has_workers: true
-  collections-publisher:
+  generic:
     show_sidekiq_graphs: true
     has_workers: true
   contacts:
     docs_name: 'contacts-admin'
-  content-audit-tool:
-    show_sidekiq_graphs: true
-    has_workers: true
-  content-publisher:
-    show_sidekiq_graphs: true
-    has_workers: true
-  content-tagger:
-    show_sidekiq_graphs: true
-    has_workers: true
-  email-alert-api:
-    show_sidekiq_graphs: true
-    has_workers: true
-  email-alert-service: {}
-  hmrc-manuals-api: {}
-  manuals-publisher:
-    show_sidekiq_graphs: true
-    has_workers: true
-  maslow: {}
-  publisher:
-    show_sidekiq_graphs: true
-    has_workers: true
   publishing-api:
     show_sidekiq_graphs: true
     has_workers: true
     instance_prefix: 'publishing_api'
     show_memcached: true
-  release: {}
-  search-admin: {}
-  service-manual-publisher: {}
-  short-url-manager: {}
-  sidekiq-monitoring: {}
-  signon:
-    show_sidekiq_graphs: true
-    has_workers: true
-  specialist-publisher:
-    show_sidekiq_graphs: true
-    has_workers: true
-  travel-advice-publisher:
-    show_sidekiq_graphs: true
-    has_workers: true
-  whitehall:
-    show_sidekiq_graphs: true
-    has_workers: true
-    error_threshold: 50
-    warning_threshold: 25
 
 grub2::recordfail_timeout: 5
 
