--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -170,13 +170,9 @@ govuk_ppa::path: 'preview'
 
 grafana::dashboards::machine_suffix_metrics: '_integration'
 grafana::dashboards::application_dashboards:
-  asset-manager:
+  generic:
     show_sidekiq_graphs: true
     has_workers: true
-  authenticating-proxy: {}
-  cache-clearing-service: {}
-  calculators: {}
-  calendars: {}
   ckan:
     docs_name: 'ckanext-datagovuk'
     # No data in kibana
@@ -185,23 +181,8 @@ grafana::dashboards::application_dashboards:
   collections:
     instance_prefix: 'frontend'
     show_memcached: true
-  collections-publisher:
-    show_sidekiq_graphs: true
-    has_workers: true
   contacts:
     docs_name: 'contacts-admin'
-  content-audit-tool:
-    show_sidekiq_graphs: true
-    has_workers: true
-  content-data-admin:
-    show_sidekiq_graphs: true
-    has_workers: true
-  content-data-api:
-    show_sidekiq_graphs: true
-    has_workers: true
-  content-publisher:
-    show_sidekiq_graphs: true
-    has_workers: true
   content-store:
     dependent_app_5xx_errors:
       - calendars
@@ -216,42 +197,22 @@ grafana::dashboards::application_dashboards:
       - publishing-api
       - smartanswers
       - whitehall-frontend
-  content-tagger:
-    show_sidekiq_graphs: true
-    has_workers: true
-  email-alert-api:
-    show_sidekiq_graphs: true
-    has_workers: true
-  email-alert-frontend: {}
-  email-alert-service: {}
-  feedback: {}
   finder-frontend:
     show_external_request_time: true
     show_memcached: true
     instance_prefix: 'calculators_frontend'
-  frontend: {}
-  government-frontend: {}
-  hmrc-manuals-api: {}
   imminence:
     dependent_app_5xx_errors:
       - frontend
     show_sidekiq_graphs: true
     has_workers: true
-  info-frontend: {}
   licencefinder:
     docs_name: 'licence-finder'
-  link-checker-api:
-    show_sidekiq_graphs: true
-    has_workers: true
   local-links-manager:
     dependent_app_5xx_errors:
       - frontend
     instance_prefix: 'backend'
     show_memcached: true
-  manuals-frontend: {}
-  manuals-publisher:
-    show_sidekiq_graphs: true
-    has_workers: true
   mapit:
     dependent_app_5xx_errors:
       - frontend
@@ -259,18 +220,11 @@ grafana::dashboards::application_dashboards:
     # No data in kibana
     show_controller_errors: false
     show_slow_requests: false
-  maslow: {}
-  publisher:
-    show_sidekiq_graphs: true
-    has_workers: true
   publishing-api:
     show_sidekiq_graphs: true
     has_workers: true
     instance_prefix: 'publishing_api'
     show_memcached: true
-  release: {}
-  router: {}
-  router-api: {}
   search-api:
     # search-api is a sinatra app
     show_controller_errors: false
@@ -282,19 +236,8 @@ grafana::dashboards::application_dashboards:
       - collections
       - finder-frontend
       - whitehall-frontend
-  search-admin: {}
-  service-manual-frontend: {}
-  service-manual-publisher: {}
-  short-url-manager: {}
-  sidekiq-monitoring: {}
-  signon:
-    show_sidekiq_graphs: true
-    has_workers: true
   smartanswers:
     docs_name: 'smart-answers'
-  specialist-publisher:
-    show_sidekiq_graphs: true
-    has_workers: true
   static:
     dependent_app_5xx_errors:
       - calendars
@@ -307,23 +250,6 @@ grafana::dashboards::application_dashboards:
       - manuals-frontend
       - smartanswers
       - whitehall-frontend
-  support:
-    show_sidekiq_graphs: true
-    has_workers: true
-  support-api:
-    show_sidekiq_graphs: true
-    has_workers: true
-  transition:
-    show_sidekiq_graphs: true
-    has_workers: true
-  travel-advice-publisher:
-    show_sidekiq_graphs: true
-    has_workers: true
-  whitehall:
-    show_sidekiq_graphs: true
-    has_workers: true
-    error_threshold: 50
-    warning_threshold: 25
 
 mongodb::backup::mongo_backup_node: 'localhost'
 
