Enable Learning To Rank in staging and integration
This sets ENABLE_LTR=1 in integration and staging.

This feature flag permits learning to rank to run
in these environments (it's also hidden behind an
AB test flag).

https://trello.com/c/YL1JhAcm/1190-enable-ltr-in-staging-and-integration

--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -47,6 +47,7 @@ govuk::apps::router::sentry_environment: 'integration'
 govuk::apps::search_api::bucket_name: 'govuk-integration-sitemaps'
 govuk::apps::search_api::elasticsearch_hosts: 'https://vpc-blue-elasticsearch6-domain-uolbxqjhkiqmg5w3gg7gio5sty.eu-west-1.es.amazonaws.com'
 govuk::apps::search_api::relevancy_bucket_name: 'govuk-integration-search-relevancy'
+govuk::apps::search_api::enable_learning_to_rank: true
 govuk::apps::short_url_manager::instance_name: 'integration'
 govuk::apps::signon::instance_name: 'integration'
 govuk::apps::smartanswers::expose_govspeak: true
