Revert "Remove Frederic"

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -200,6 +200,7 @@ users::usernames:
   - ericyoung
   - erinrajstaniland
   - felisialoukou
+  - fredericfrancois
   - huwdiprose
   - ianjames
   - isabelllong
