--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -459,6 +459,7 @@ users::usernames:
   - ericyoung
   - erinrajstaniland
   - felisialoukou
+  - fredericfrancois
   - huwdiprose
   - ianjames
   - isabelllong
