--- a/hieradata_aws/training.yaml
+++ b/hieradata_aws/training.yaml
@@ -179,6 +179,7 @@ users::usernames:
   - emmabeynon
   - erinrajstaniland
   - felisialoukou
+  - fredericfrancois
   - ianjames
   - isabelllong
   - jessicajones
