--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -201,6 +201,7 @@ users::usernames:
   - erinrajstaniland
   - felisialoukou
   - fredericfrancois
+  - grahamlewis  
   - huwdiprose
   - ianjames
   - isabelllong
