--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -461,6 +461,7 @@ users::usernames:
   - erinrajstaniland
   - felisialoukou
   - fredericfrancois
+  - grahamlewis
   - huwdiprose
   - ianjames
   - isabelllong
