Remove backup jobs for email-alert-api in Carrenza.
Now that email-alert-api is in AWS, backups should no longer run from
there.

Also clean up the already ensure:absent backup config in Carrenza
Staging.

--- a/hieradata/node/postgresql-primary-1.backend.publishing.service.gov.uk.yaml
+++ b/hieradata/node/postgresql-primary-1.backend.publishing.service.gov.uk.yaml
@@ -1,6 +1,6 @@
 govuk_env_sync::tasks:
   "push_email_alert_api_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "2"
     minute: "01"
     action: "push"
