--- a/hieradata_aws/class/production/db_admin.yaml
+++ b/hieradata_aws/class/production/db_admin.yaml
@@ -21,6 +21,17 @@ govuk_env_sync::tasks:
     temppath: "/tmp/content_data_admin_production_push"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
+  "push_email_alert_api_production_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "40"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "email-alert-api_production"
+    temppath: "/tmp/email-alert-api_production"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
   "push_local-links-manager_production_daily":
     ensure: "present"
     hour: "3"
