Grant GOV.UK ITHC GitHub group access to Jenkins
This grants access to GOV.UK ITHC Group access to
Jenkins in integration and staging.

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -56,6 +56,9 @@ govuk_jenkins::config::user_permissions:
     user: 'alphagov*GOV.UK'
     permissions: *jenkins_admin_permission_list
   -
+    user: 'alphagov*GOV.UK ITHC'
+    permissions: *jenkins_admin_permission_list
+  -
     user: 'anonymous'
     permissions:
       - 'hudson.model.Hudson.Read'
