Allow pentesters access to integration

--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -480,6 +480,9 @@ users::usernames:
   - michaelswalker
   - murilodalri
   - oscarwyatt
+  - pentesterb
+  - pentesterc
+  - pentesterh
   - peterhartshorn
   - richardmorton
   - rochtrinque
