fixup! Allow pentesters access to integration

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -224,6 +224,9 @@ users::usernames:
   - michaelswalker
   - murilodalri
   - oscarwyatt
+  - pentesterb
+  - pentesterc
+  - pentesterh
   - peterhartshorn
   - richardmorton
   - rochtrinque
