--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -32,6 +32,18 @@ govuk_env_sync::tasks:
     temppath: "/tmp/content_data_admin_production_push"
     url: "govuk-integration-database-backups"
     path: "postgresql-backend"
+  "pull_email_alert_api_production_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "10"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "email-alert-api_production"
+    temppath: "/tmp/email-alert-api_production"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
+    transformation_sql_filename: "anonymise_email_addresses.sql"
   "push_local-links-manager_integration_daily":
     ensure: "present"
     hour: "3"
