Stop backing up Integration publishing-api; there's no need.
This just takes up resources for no benefit, so let's stop doing it.

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -155,7 +155,7 @@ govuk_env_sync::tasks:
     url: "govuk-integration-database-backups"
     path: "postgresql-backend"
   "push_publishing_api_integration_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "2"
     minute: "40"
     action: "push"
