Sync Publishing API Integration database nightly from AWS Prod.
This fixes the data sync from Production to Integration for
publishing-api after the migration to AWS.

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -273,3 +273,14 @@ govuk_env_sync::tasks:
     database: "licensify-refdata"
     hour: "6"
     minute: "30"
+  "pull_publishing_api_production_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "40"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "publishing_api_production"
+    temppath: "/tmp/publishing_api_production"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
