Perform data sanitisation when syncing Publishing API to Integration.
This adds back the same data sanitisation to the govuk_env_sync job that
used to run as part of the old env-sync-and-backup job.

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -284,3 +284,4 @@ govuk_env_sync::tasks:
     temppath: "/tmp/publishing_api_production"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
+    transformation_sql_filename: "sanitise_publishing_api_production.sql"
