Revert "Prevent CKAN sync between production and staging"

--- a/hieradata_aws/class/staging/db_admin.yaml
+++ b/hieradata_aws/class/staging/db_admin.yaml
@@ -1,6 +1,6 @@
 govuk_env_sync::tasks:
   "pull_ckan_production_daily":
-    ensure: "absent"
+    ensure: "present"
     hour: "3"
     minute: "15"
     action: "pull"
