Add Jos Koetsier to email whitelist.
https://docs.publishing.service.gov.uk/manual/receiving-emails-from-email-alert-api-in-integration-and-staging.html

Allow Jos Koetsier to receive notify emails integration/staging.

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -323,6 +323,7 @@ govuk::apps::email_alert_api::email_address_override_whitelist:
   - deborah.chua@digital.cabinet-office.gov.uk
   - edward.kerry@digital.cabinet-office.gov.uk
   - jennifer.allum@digital.cabinet-office.gov.uk
+  - jos.koetsier@digital.cabinet-office.gov.uk
   - kevin.dew@digital.cabinet-office.gov.uk
   - leanne.cummings@digital.cabinet-office.gov.uk
   - robert.bond@digital.cabinet-office.gov.uk
