--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -488,6 +488,7 @@ govuk::apps::email_alert_api::email_address_override_whitelist:
   - dilwoar.hussain@digital.cabinet-office.gov.uk
   - edward.kerry@digital.cabinet-office.gov.uk
   - jennifer.allum@digital.cabinet-office.gov.uk
+  - jos.koetsier@digital.cabinet-office.gov.uk
   - kevin.dew@digital.cabinet-office.gov.uk
   - leanne.cummings@digital.cabinet-office.gov.uk
   - michael.s.walker@digital.cabinet-office.gov.uk
