only try to scrape node_exporter on running hosts
There are some stopped gatling boxes in production, which prometheus
is trying to scrape.  This means that they appear as "down" targets in
prometheus.

I think Prometheus maybe shouldn't try to scrape instances that are
known to be stopped?

Those gatling boxes are a bit weird in any case; they don't have the
same tags as the other boxes in that environment.

--- a/modules/govuk_prometheus/files/etc/prometheus/prometheus.yml
+++ b/modules/govuk_prometheus/files/etc/prometheus/prometheus.yml
@@ -27,3 +27,6 @@ scrape_configs:
     ec2_sd_configs:
       - region: "eu-west-1"
         port: 9080
+        filters:
+        - name: instance-state-name
+          values: [ running ]
