scrape prometheus metrics as well
Prometheus exposes metrics about itself.  We should scrape them.

This uses ec2_sd_configs to scrape only instances which have tag
`aws_migration` set to `prometheus`.

--- a/modules/govuk_prometheus/files/etc/prometheus/prometheus.yml
+++ b/modules/govuk_prometheus/files/etc/prometheus/prometheus.yml
@@ -30,3 +30,12 @@ scrape_configs:
         filters:
         - name: instance-state-name
           values: [ running ]
+  - job_name: 'prometheus'
+    ec2_sd_configs:
+      - region: "eu-west-1"
+        port: 9090
+        filters:
+        - name: instance-state-name
+          values: [ running ]
+        - name: tag:aws_migration
+          values: [ prometheus ]
