--- a/modules/govuk_prometheus/files/etc/prometheus/prometheus.yml
+++ b/modules/govuk_prometheus/files/etc/prometheus/prometheus.yml
@@ -23,7 +23,7 @@ rule_files:
 
 # A scrape configuration for ec2 instances
 scrape_configs:
-  - job_name: 'ec2'
+  - job_name: 'node'
     ec2_sd_configs:
       - region: "eu-west-1"
         port: 9080
