--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -167,6 +167,7 @@ govuk::apps::search_api::bucket_name: 'govuk-production-sitemaps'
 govuk::apps::search_api::elasticsearch_hosts: 'https://vpc-blue-elasticsearch6-domain-2hnib7uydv3tgebhabx74gdelq.eu-west-1.es.amazonaws.com'
 govuk::apps::search_api::relevancy_bucket_name: 'govuk-production-search-relevancy'
 govuk::apps::search_api::tensorflow_models_directory: '/data/vhost/tensorflow-models'
+govuk::apps::search_api::tensorflow_serving_ip: '0.0.0.0'
 govuk::apps::short_url_manager::instance_name: 'production'
 govuk::apps::static::ga_universal_id: 'UA-26179049-1'
 govuk::apps::support::zendesk_anonymous_ticket_email: 'zd-api-public@digital.cabinet-office.gov.uk'
