Stop monitoring the Kibana redirect.
This is the redirect from kibana.*.publishing.service.gov.uk to LogIt.
The redirect is no longer is use and the app which serves it is being
decommissioned because breaks spinning up new `backend` instances and
isn't worth fixing.

--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -355,6 +355,7 @@ monitoring::checks::lb::loadbalancers:
       - backend-content-api
       - backend-content-performance-m
       - backend-docs
+      - backend-kibana
       - backend-policy-publisher
   govuk-cache-public: {}
 
