--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -525,6 +525,7 @@ govuk_ci::master::pipeline_jobs:
   calendars: {}
   collections: {}
   content-store: {}
+  email-alert-api: {}
   email-alert-frontend: {}
   finder-frontend: {}
   frontend: {}
