--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -715,6 +715,7 @@ govuk_jenkins::jobs::integration_deploy::applications:
     repository: 'ckanext-datagovuk'
   collections: {}
   content-store: {}
+  email-alert-api: {}
   email-alert-frontend: {}
   finder-frontend: {}
   frontend: {}
@@ -729,6 +730,7 @@ govuk_jenkins::jobs::integration_deploy::applications:
   local-links-manager: {}
   manuals-frontend: {}
   mapit: {}
+  publishing-api: {}
   router: {}
   router-api: {}
   search-api: {}
