--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -215,6 +215,7 @@ users::usernames:
   - oscarwyatt
   - peterhartshorn
   - rochtrinque
+  - rosafox
   - samuelculley
   - sarahyoung
   - seanrankine
