--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -481,6 +481,7 @@ users::usernames:
   - oscarwyatt
   - peterhartshorn
   - rochtrinque
+  - rosafox
   - samuelculley
   - sarahyoung
   - seanrankine
