Run nightly backups of Whitehall and Assets DBs from AWS Prod.
Once Whitehall and Asset Manager are migrated to AWS, we need to start
running their nightly database backups from there.

--- a/hieradata_aws/class/production/db_admin.yaml
+++ b/hieradata_aws/class/production/db_admin.yaml
@@ -32,6 +32,17 @@ govuk_env_sync::tasks:
     temppath: "/tmp/email-alert-api_production"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
+  "push_govuk_assets_production":
+    ensure: "present"
+    hour: "1"
+    minute: "00"
+    action: "push"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "govuk_assets_production"
+    temppath: "/tmp/govuk_assets_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
   "push_local-links-manager_production_daily":
     ensure: "present"
     hour: "3"
@@ -54,6 +65,17 @@ govuk_env_sync::tasks:
     temppath: "/tmp/publishing_api_production"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
+  "push_whitehall_production_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "00"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "whitehall_production"
+    temppath: "/tmp/whitehall_production"
+    url: "govuk-production-database-backups"
+    path: "mysql"
   "push_link-checker-api_production_daily":
     ensure: "present"
     hour: "3"
