Stop running Whitehall/Assets nightly DB backups in Carrenza Prod.
Once Whitehall and Asset Manager are migrated to AWS, we need to stop
running their database backups from there.

--- a/hieradata/node/mongo-2.backend.publishing.service.gov.uk.yaml
+++ b/hieradata/node/mongo-2.backend.publishing.service.gov.uk.yaml
@@ -4,7 +4,7 @@ mongodb::s3backup::cron::realtime_minute: '*/30'
 
 govuk_env_sync::tasks:
   "push_govuk_assets_production":
-    ensure: "present"
+    ensure: "absent"
     hour: "1"
     minute: "00"
     action: "push"
