Added Alex Newton to manifests and hieradata

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -171,6 +171,7 @@ postfix::smarthost:
 users::usernames:
   - alangabbianelli
   - alexandrujurubita
+  - alexnewton
   - andysellick
   - benjamineskola
   - benthorner
