--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -446,6 +446,7 @@ router::nginx::check_requests_critical: '@0.25'
 users::usernames:
   - alangabbianelli
   - alexandrujurubita
+  - alexnewton
   - andysellick
   - benjamineskola
   - benthorner
