Adding Release app to AWS Staging
Pair: @smford & @sengi

--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -26,6 +26,7 @@ node_class: &node_class
       - imminence
       - link-checker-api
       - local-links-manager
+      - release
       - sidekiq-monitoring
       - support
       - support-api
