Add Data Sync For Asset Manager DocumentDB in Integration

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -274,3 +274,14 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
     transformation_sql_filename: "sanitise_publishing_api_production.sql"
+  "pull_govuk_assets_production":
+    ensure: "present"
+    hour: "3"
+    minute: "30"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "govuk_assets_production"
+    temppath: "/tmp/govuk_assets_production"
+    url: "govuk-staging-database-backups"
+    path: "mongo-normal"
