--- a/hieradata_aws/class/staging/db_admin.yaml
+++ b/hieradata_aws/class/staging/db_admin.yaml
@@ -155,3 +155,14 @@ govuk_env_sync::tasks:
     temppath: "/tmp/govuk_assets_production"
     url: "govuk-production-database-backups"
     path: "mongo-normal"
+  "push_govuk_assets_production":
+    ensure: "present"
+    hour: "3"
+    minute: "00"
+    action: "push"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "govuk_assets_production"
+    temppath: "/tmp/govuk_assets_staging"
+    url: "govuk-staging-database-backups"
+    path: "mongo-normal"
