Adds the user rebeccapearce

--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -485,6 +485,7 @@ users::usernames:
   - murilodalri
   - oscarwyatt
   - peterhartshorn
+  - rebeccapearce
   - rochtrinque
   - rosafox
   - sarahyoung
