--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -54,6 +54,7 @@ govuk::apps::search_api::tensorflow_sagemaker_endpoint: 'govuk-integration-searc
 govuk::apps::short_url_manager::instance_name: 'integration'
 govuk::apps::signon::instance_name: 'integration'
 govuk::apps::smartanswers::expose_govspeak: true
+govuk::apps::specialist_publisher::aws_s3_bucket_name: 'govuk-integration-specialist-publisher-csvs'
 govuk::apps::specialist_publisher::publish_pre_production_finders: true
 govuk::apps::static::ga_universal_id: 'UA-26179049-22'
 govuk::apps::support::aws_s3_bucket_name: 'govuk-integration-support-api-csvs'
