--- a/hieradata_aws/training.yaml
+++ b/hieradata_aws/training.yaml
@@ -46,6 +46,7 @@ govuk::apps::search_api::bucket_name: 'govuk-training-sitemaps'
 govuk::apps::short_url_manager::instance_name: 'training'
 govuk::apps::signon::instance_name: 'training'
 govuk::apps::smartanswers::expose_govspeak: true
+govuk::apps::specialist_publisher::aws_s3_bucket_name: 'govuk-training-specialist-publisher-csvs'
 govuk::apps::specialist_publisher::publish_pre_production_finders: true
 govuk::apps::static::ga_universal_id: 'UA-26179049-22'
 govuk::apps::support::aws_s3_bucket_name: 'govuk-training-support-api-csvs'
