Sync redacted Whitehall data from Staging to Integration.
- Add a job to redact the Staging database (in situ) then dump it to S3.
- Add a job to restore the redacted dump into Integration.
- Adjust the timings so that the in-place redaction of Staging happens
  shortly before Staging gets overwritten with the latest dump from Prod.

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -231,15 +231,26 @@ govuk_env_sync::tasks:
     temppath: "/tmp/signon_production"
     url: "govuk-integration-database-backups"
     path: "mysql-backend"
-  "push_whitehall_integration_daily":
+  "pull_whitehall_staging_daily":
     ensure: "present"
     hour: "1"
-    minute: "45"
+    minute: "30"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "whitehall_production"
+    temppath: "/tmp/whitehall_staging"
+    url: "govuk-staging-database-backups"
+    path: "mysql"
+  "push_whitehall_integration_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "30"
     action: "push"
     dbms: "mysql"
     storagebackend: "s3"
     database: "whitehall_production"
-    temppath: "/tmp/whitehall_production"
+    temppath: "/tmp/whitehall_integration"
     url: "govuk-integration-database-backups"
     path: "mysql-backend"
   "pull_licensify_staging_daily": &pull_licensify
