Add Data Sync For Remaining Publishing Apps In Staging
This is so we can begin the migration of the remaining publishing apps to AWS. We are planning on migrating the following:

Maslow
Manuals Publisher
Publisher
Short-url-manager
Travel Advice Publisher
Collections Publisher
Contacts
Search admin
Content-tagger
Service-manual-publisher

At the moment the code is set up to pull data from the govuk-staging-database-backups bucket, as the code to push data to S3 does not yet exist in Carrenza Production.

--- a/hieradata/node/postgresql-primary-1.backend.staging.publishing.service.gov.uk.yaml
+++ b/hieradata/node/postgresql-primary-1.backend.staging.publishing.service.gov.uk.yaml
@@ -11,9 +11,9 @@ govuk_env_sync::tasks:
     url: "govuk-staging-database-backups"
     path: "postgresql-backend"
   "push_content_tagger_production_daily":
-    ensure: "absent"
+    ensure: "present"
     hour: "0"
-    minute: "7"
+    minute: "6"
     action: "push"
     dbms: "postgresql"
     storagebackend: "s3"
@@ -22,7 +22,7 @@ govuk_env_sync::tasks:
     url: "govuk-staging-database-backups"
     path: "postgresql-backend"
   "push_service-manual-publisher_production_daily":
-    ensure: "absent"
+    ensure: "present"
     hour: "0"
     minute: "4"
     action: "push"
