--- a/hieradata_aws/class/staging/db_admin.yaml
+++ b/hieradata_aws/class/staging/db_admin.yaml
@@ -65,6 +65,17 @@ govuk_env_sync::tasks:
     temppath: "/tmp/content_data_admin_production_push"
     url: "govuk-staging-database-backups"
     path: "postgresql-backend"
+  pull_content_tagger_production_daily":
+    ensure: "present"
+    hour: "0"
+    minute: "7"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_tagger_production"
+    temppath: "/tmp/content_tagger_production"
+    url: "govuk-staging-database-backups"
+    path: "postgresql-backend"
   "pull_email_alert_api_production_daily":
     ensure: "present"
     hour: "3"
@@ -97,6 +108,17 @@ govuk_env_sync::tasks:
     database: "support_contacts_production"
     temppath: "/tmp/support_contacts_production"
     url: "govuk-production-database-backups"
+    path: "postgresql-backend"
+  "pull_service-manual-publisher_production_daily":
+    ensure: "present"
+    hour: "0"
+    minute: "5"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "service-manual-publisher_production"
+    temppath: "/tmp/service-manual-publisher_production"
+    url: "govuk-staging-database-backups"
     path: "postgresql-backend"
   "pull_licensify_production_daily": &pull_licensify
     ensure: "present"
@@ -133,6 +155,39 @@ govuk_env_sync::tasks:
     database: "licensify-refdata"
     hour: "5"
     minute: "45"
+  "pull_collections_publisher_production_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "12"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "collections_publisher_production"
+    temppath: "/tmp/collections_publisher_production"
+    url: "govuk-staging-database-backups"
+    path: "mysql"
+  "pull_contacts_production_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "14"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "contacts_production"
+    temppath: "/tmp/contacts_production"
+    url: "govuk-staging-database-backups"
+    path: "mysql"
+  "pull_search_admin_production_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "20"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "search_admin_production"
+    temppath: "/tmp/search_admin_production"
+    url: "govuk-staging-database-backups"
+    path: "mysql"
   "pull_mysql_whitehall_production_daily":
     ensure: "present"
     hour: "3"
@@ -175,5 +230,60 @@ govuk_env_sync::tasks:
     storagebackend: "s3"
     database: "govuk_assets_production"
     temppath: "/tmp/govuk_assets_staging"
+    url: "govuk-staging-database-backups"
+    path: "mongo-normal"
+  "pull_maslow_production":
+    ensure: "present"
+    hour: "2"
+    minute: "05"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "maslow_production"
+    temppath: "/tmp/maslow_production"
+    url: "govuk-staging-database-backups"
+    path: "mongo-normal"
+  "pull_govuk_content_production":
+    ensure: "present"
+    hour: "3"
+    minute: "20"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "govuk_content_production"
+    temppath: "/tmp/govuk_content_production"
+    url: "govuk-staging-database-backups"
+    path: "mongo-normal"
+  "pull_publisher_production":
+    ensure: "present"
+    hour: "2"
+    minute: "10"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "publisher_production"
+    temppath: "/tmp/publisher_production"
+    url: "govuk-staging-database-backups"
+    path: "mongo-normal"
+  "pull_short_url_manager_production":
+    ensure: "present"
+    hour: "2"
+    minute: "25"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "short_url_manager_production"
+    temppath: "/tmp/short_url_manager_production"
+    url: "govuk-staging-database-backups"
+    path: "mongo-normal"
+  "pull_travel_advice_publisher_production":
+    ensure: "present"
+    hour: "2"
+    minute: "35"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "travel_advice_publisher_production"
+    temppath: "/tmp/travel_advice_publisher_production"
     url: "govuk-staging-database-backups"
     path: "mongo-normal"
