Fix Incorrect App Name
Mistakenly added contacts-admin instead of just contacts in last
commit.

--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -20,7 +20,7 @@ node_class: &node_class
       - asset-manager
       - cache-clearing-service
       - canary-backend
-      - contacts-admin
+      - contacts
       - content-data-admin
       - content-data-api
       - content-tagger
