--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -60,6 +60,7 @@ govuk::apps::specialist_publisher::publish_pre_production_finders: true
 govuk::apps::static::ga_universal_id: 'UA-26179049-22'
 govuk::apps::support::aws_s3_bucket_name: 'govuk-integration-support-api-csvs'
 govuk::apps::support_api::aws_s3_bucket_name: 'govuk-integration-support-api-csvs'
+govuk::apps::support_api::govuk_notify_template_id: "759acac6-da53-4a19-b591-b7538c7c39de"
 govuk::apps::travel_advice_publisher::enable_email_alerts: true
 govuk::apps::travel_advice_publisher::show_historical_edition_link: true
 govuk::apps::url_arbiter::db::backend_ip_range: '10.1.3.0/24'
