Add restore jobs for mysql-backed publishing apps
Rather than relying on backup-and-sync, instead restore integration from
backups that are created by govuk_env_sync

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -296,3 +296,36 @@ govuk_env_sync::tasks:
     temppath: "/tmp/govuk_assets_production"
     url: "govuk-staging-database-backups"
     path: "mongo-normal"
+  "pull_collections_publisher_production_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "12"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "collections_publisher_production"
+    temppath: "/tmp/collections_publisher_production"
+    url: "govuk-production-database-backups"
+    path: "mysql"
+  "pull_contacts_production_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "14"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "contacts_production"
+    temppath: "/tmp/contacts_production"
+    url: "govuk-production-database-backups"
+    path: "mysql"
+  "pull_search_admin_production_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "20"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "search_admin_production"
+    temppath: "/tmp/search_admin_production"
+    url: "govuk-production-database-backups"
+    path: "mysql"
