Enable pull_service-manual-publisher_stag_daily AWS Intergration
We want AWS integration to pull in a daily copy of stagings
service-manual-publisher postgres database.

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -329,3 +329,14 @@ govuk_env_sync::tasks:
     temppath: "/tmp/search_admin_production"
     url: "govuk-production-database-backups"
     path: "mysql"
+  "pull_service-manual-publisher_staging":
+    ensure: "present"
+    hour: "2"
+    minute: "5"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "service-manual-publisher_production"
+    temppath: "/tmp/service-manual-publisher_production"
+    url: "govuk-staging-database-backups"
+    path: "postgresql-backend"
